integration_tests/codegen_fail/fail/scalar/derive_input/derive_transparent_and_with.rs
use juniper::GraphQLScalar;

#[derive(GraphQLScalar)]
#[graphql(with = Self, transparent)]
struct Scalar;

fn main() {}
