integration_tests/codegen_fail/fail/scalar/derive_input/derive_transparent_and_with.stderr
error: GraphQL scalar `with = <path>` attribute can\'t be combined with `transparent`. You can specify custom resolvers with `to_output`, `from_input`, `parse_token` attributes and still use `transparent` for unspecified ones.
 --> fail/scalar/derive_input/derive_transparent_and_with.rs:4:18
  |
4 | #[graphql(with = Self, transparent)]
  |                  ^^^^
